# Nvidia-JSB

./: .gitignore  LICENSE  README.md  USAGE_GUIDE.md  aero_codegen.py  jsb_properties.txt  main.py  pioneer_test_dataset_acts.npy  prop_converter.py  pyproject.toml  setup.py  validation.py  validation_report.csv
data/c172p/: aero_coefficient_CDDf.npy  aero_coefficient_CDwbh_meta.npy  aero_coefficient_CLDf.npy  aero_coefficient_CLwbh_meta.npy  aero_coefficient_Clb.npy  aero_coefficient_Clr_meta.npy  aero_coefficient_Cmdf.npy  aero_function_kCDge.npy  aero_function_kCLge_meta.npy
examples/: basic_flight.py  benchmark_harvester.py  model_test_run.py  visualize_trajectories.py
scratch/: dump_att.py  dump_pos.py  extract_engine.py  find_q.py  list_props.py  test_struct.py  verify_module.py
tools/: validation.py
warp_jsb/: __init__.py  aero_generated.py  aerodynamics.py  atmosphere.py  curriculum.py  eom.py  experience.py  fcs.py  ground_reactions.py  launcher.py  logger.py  lut.py  preprocessing.py  propulsion.py
warp_jsb/assets/c172p/: C_POWER.npy  C_POWER_meta.npy  C_THRUST.npy  aero_coefficient_CDDf_meta.npy  aero_coefficient_CDwbh.npy  aero_coefficient_CLwbh.npy  aero_coefficient_CYb.npy  aero_coefficient_CYb_meta.npy  aero_coefficient_CYp.npy  aero_coefficient_CYr.npy  aero_coefficient_Clb_meta.npy  aero_coefficient_Clr.npy  aero_coefficient_Cnb.npy  aero_function_kCLge.npy  manifest.json
